# BioReasoner

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: akt_activation_no_wnt_receptors.yaml  akt_inactive_despite_rtks.yaml  akt_no_growth_factor_baseline.yaml  akt_with_growth_factor.yaml  akt_wnt_crosstalk_preserves_beta_cat.yaml  apoptosis_baseline_conflicting_signals.yaml  apoptosis_high_no_signals.yaml  apoptosis_low_no_akt_signal.yaml  destruction_complex_high.yaml  gsk3_constitutively_active_mutant.yaml  no_wnt_baseline.yaml  rtk_drives_gsk3_inactivation_but_high_destruction_complex.yaml  rtk_present_no_wnt_no_growth_factor.yaml  wnt_demo.yaml  wnt_full_activation_complex.yaml  wnt_high_destruction_complex_suppression.yaml  wnt_receptors_no_growth_factor.yaml  wnt_with_high_destruction_complex.yaml
scenarios/: akt_activation_with_wnt_receptors.yaml  akt_phospho_S473_only.yaml  akt_phospho_T308_only.yaml  all_receptors_present_no_ligands.yaml  apoptosis_high_then_akt_activation.yaml  constitutively_active_pi3k.yaml  lrp6_inactive_mutant_high_destruction_complex.yaml  mut_lrp6_no_activation.yaml  pre_inactive_gsk3_then_growth_factor.yaml  rtk_present_no_ligand.yaml  wnt_inhibits_gsk3_no_rtk.yaml  wnt_receptors_present_no_wnt_no_rtks.yaml
scripts/: reproduce_offline.sh
src/: __init__.py  batch_eval.py  engine.py  facts.py  llm_eval.py  llm_parser.py  local_llm_client.py  ollama_llm_client.py  rules.py  scenarios.py  vocab.py
tests/: test_engine_basic.py  test_scenarios.py
(+6 files in other folders)
